--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,7 @@
-/**
-
-Copyright (c) 2011 Pierce Moore, RefreshedWeb.com, and NerdTraining.info
-All rights reserved.
-
-Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
-
-Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
-Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.
-Neither the names of Pierce Moore, RefreshedWeb.com, NerdTraining.info,  nor the names of its contributors may be used to endorse or promote products derived from this software without specific prior written permission.
-THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-
-**/
-
 {
-
 	"name":	"Bad Ass New Tab Page",
-	"version": "0.1",
-	"description": "I got tired of Chrome's ugly new tab page, so this is an attempt to fix it and make it more useful. In line for development are custom links, a small task manager, and a built-in alarm clock.",
+	"version": "0.1.2",
+	"description": "I got tired of Chrome's ugly new tab page, so this is an attempt to fix it and make it more useful. Stay tuned for new features!",
 	"browser_action": {
 		"default_icon": "img/icon_19.png",
 		"default_title": "Bad Ass New Tab Page",
@@ -27,6 +12,7 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 		"48": "img/icon_48.png",
 		"128": "img/icon_128.png"
 	},
+	"background_page": "tabPageFiles/bg.html",
 	"options_page": "tabPageFiles/options.html",
 	"chrome_url_overrides": {
 		"newtab": "tabPageFiles/ClockAndLinks/index.htm"
@@ -35,5 +21,4 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 		"tabs",
 		"notifications"
 	]
-
 }
